# tsp_solver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_tests.py  struct.txt
tests/: test_bench.py  visualisation.py
tsp_solver/: __init__.py
tsp_solver/core/: __init__.py  city.py  tsplib_importer.py
tsp_solver/genetic/: __init__.py  algorithm.py
tsp_solver/genetic/operators/: __init__.py  crossover.py  mutation.py  selection.py
tsp_solver/ui/: __init__.py  canvas.py  main_window.py
