[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsp-solver"
version = "0.1.0"
description = "TSP solver using genetic algorithm"
readme = "README.md"
authors = [
    {name = "AHAMADA Naheri", email = "naheriahamada@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["tsp", "genetic algorithm", "optimization"]
dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "PyQt5>=5.15.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "tqdm>=4.62.0",
    "seaborn>=0.11.0",
]
requires-python = ">=3.6"

[project.scripts]
tsp-solver = "main:main"

[project.urls]
"Homepage" = "https://github.com/naheri/tsp_solver"
"Bug Tracker" = "https://github.com/naheri/tsp_solver/issues"